# minibili

./: .eslintrc-auto-import.js  .prettierignore  README.md  _config.yml  auto-imports.d.ts  components.d.ts  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  jekyll-gh-pages.yml  release.yml  test-android.yml
docs/: about.md  develop.md  index.md  use.md
docs/.vitepress/: config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.config.json  tauri.macos.conf.json  tauri.windows.config.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  utils.rs  video.rs
src-tauri/src/core/: handle.rs  tray.rs
src-tauri/src/utils/: cookie.rs  dirs.rs  download.rs  request.rs  resolve.rs  socket.rs  wbi.rs
src-tauri/templates/: installer.nsi  minibili.desktop
src/apis/: http.ts  types.ts
src/apis/live/: area.ts  follow.ts  info.ts  live.ts  stream.ts
src/apis/login/: captcha.ts  geetest.ts  password.ts  phone.ts  qrcode.ts
src/apis/search/: all.ts  hot.ts  search.ts
src/apis/sign/: bili-ticket.ts  nav.ts
src/apis/types/: apis.ts  geetest.ts  live-follow.ts  live-info.ts  live-msg-stream.ts  live-stream-msg.ts  live-stream.ts  live.ts  password-login.ts  phone-login.ts  play-url.ts  player-info.ts  search-all.ts  search-hot.ts  search-response.ts  search.ts  space-info.ts  video-details.ts  video-popular.ts  video-recommendations.ts
src/apis/user/: info.ts
src/apis/video/: info.ts  player.ts  recommend.ts  stream.ts  types.ts
src/apis/video_ranking/: popular.ts  ranking.ts
src/common/: commands.ts  constants.ts  utils.ts  wbi.ts
src/common/geetest/: click.js
src/common/types/: emits.ts  props.ts  video-card-data.ts
src/components/: BangumiCard.vue  BiliIframePlayer.vue  CaptchaCard.vue  Home.vue  Hot.vue  Login.vue  Popular.vue  PopularPrecious.vue  PopularSeries.vue  Rank.vue  Ranking.vue  Recommand.vue  Recommend.vue  Search.vue  SearchBox.vue  Setting.vue  Video.vue  VideoCard.vue  VideoPlayer.vue
src/components/home/: PopularSeries.vue  Ranking.vue  Recommend.vue
src/components/layout/: AppBar.vue  SideBar.vue
src/components/live/: DanmuCard.vue  Live.vue  LiveRoom.vue  LiveRoomCard.vue
src/components/pages/: Home.vue  Login.vue  NotFound.vue  Search.vue  Setting.vue  Space.vue  Video.vue
src/components/player/: LivePlayer.vue  Player.vue  VideoPlayer.vue
src/components/search/: SearchAll.vue  SearchBanguni.vue  SearchBox.vue  SearchVideo.vue
src/router/: index.ts
src/service/: commands.ts  request.ts  tauri-store.ts
src/store/: locale.ts  settings.ts  theme.ts
src/styles/: global.scss
