[package]
name = "minibili"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "minibili_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.0.0-rc"
tokio = "1.40.0"
reqwest = { version = "0.12.8", features = [
    "json",
    "cookies",
    "gzip",
    "brotli",
    "deflate",
] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-clipboard-manager = "2.0.1"
md5 = "0.7.0"
url = "2.5.2"
http = "1.1.0"
thiserror = "1.0.64"
once_cell = "1.20.2"
futures-util = "0.3.31"
tauri-plugin-dialog = "2.0.0-rc"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
