[package]
name = "minibili"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "minibili_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset",
    "tray-icon",
    "devtools",
] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tokio = "1.41.0"
reqwest = { version = "0.12.9", features = [
    "json",
    "cookies",
    "gzip",
    "brotli",
    "deflate",
] }
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2.0.1"
md5 = "0.7.0"
url = "2.5.2"
http = "1.1.0"
thiserror = "1.0.66"
once_cell = "1.20.2"
futures-util = "0.3.31"
tauri-plugin-dialog = "2"
regex = "1.11.1"
log = "^0.4"
reqwest-websocket = "0.4.3"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
